Add instructions to run the application

--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,12 @@ plugins {
 }
 
 group = 'com.investec'
-version = '0.0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
+
+jar {
+	enabled = false
+}
 
 configurations {
 	compileOnly {
